# xsdmesh

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark.yml  lint.yml  publish.yml  test.yml
scripts/: benchmark.py  download_w3c_suite.py
src/xsdmesh/: __init__.py  constants.py  exceptions.py
src/xsdmesh/graph/: __init__.py
src/xsdmesh/loader/: __init__.py
src/xsdmesh/parser/: __init__.py  context.py  events.py  handlers.py  qname.py  xml_parser.py
src/xsdmesh/types/: __init__.py  base.py  facets.py  registry.py  storage.py
src/xsdmesh/utils/: __init__.py  bloom.py  cache.py  debug.py  logger.py  profiler.py  trie.py
src/xsdmesh/validators/: __init__.py
src/xsdmesh/xpath/: __init__.py
src/xsdmesh/xsd11/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/parser/: test_context.py  test_events.py  test_qname.py  test_xml_parser.py
tests/types/: test_base.py  test_facets.py  test_qname.py  test_registry.py  test_storage.py
tests/unit/: __init__.py  test_version.py
tests/w3c/: __init__.py  conftest.py  test_w3c_suite.py
