[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xsdmesh"
version = "0.1.0"
description = "Blazing fast XSD 1.1 parser with in-memory schema graph"
authors = [{name = "Yuriy Krasilnikov"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
keywords = ["xsd", "xml", "schema", "parser", "xpath", "validation", "xsd11"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: XML",
    "Typing :: Typed",
]

dependencies = [
    "lxml>=6.0.2",
    "elementpath>=5.0.4",  # XPath 2.0 evaluator for XSD 1.1 assertions
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "pytest-benchmark>=5.2.3",
    "mypy>=1.18.2",
    "ruff>=0.14.6",
    "types-lxml>=2025.8.25",
    "pre-commit>=4.5.0",
    "build>=1.3.0",
    "twine>=6.2.0",
]

test = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "coverage[toml]>=7.0.0",
]

docs = [
    "sphinx>=8.2.3",
    "furo>=2025.9.25",  # Modern clean theme
    "myst-parser>=4.0.1",  # Markdown support for Sphinx
    "sphinx-autodoc-typehints>=3.5.2",  # Better type hints in docs
]

benchmark = [
    "pytest-benchmark>=5.2.3",
    "scalene>=1.5.55",  # CPU/GPU/Memory profiler
]

[project.urls]
Homepage = "https://github.com/YuriyKrasilnikov/xsdmesh"
Documentation = "https://xsdmesh.readthedocs.io"
Repository = "https://github.com/YuriyKrasilnikov/xsdmesh"
Issues = "https://github.com/YuriyKrasilnikov/xsdmesh/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/xsdmesh"]

[tool.hatch.version]
path = "src/xsdmesh/__init__.py"

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # annotations
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN"]
"src/xsdmesh/utils/*.py" = ["ANN401"]  # Allow Any in generic utilities

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "w3c: marks W3C conformance tests",
]

[tool.coverage.run]
source = ["src/xsdmesh"]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
plugins = []

[[tool.mypy.overrides]]
module = "elementpath.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "lxml.*"
ignore_missing_imports = true
